[gd_scene load_steps=28 format=3 uid="uid://dur3ycrqfb7xb"]

[ext_resource type="Script" uid="uid://dpa2o5x025oa" path="res://scenes/room_test/room_test.gd" id="1_3p6pu"]
[ext_resource type="Script" uid="uid://03hclmhrjtqf" path="res://scenes/room_test/room_visual.gd" id="2_1487q"]
[ext_resource type="Resource" uid="uid://d34810v8glq1l" path="res://resources/key_ordering.tres" id="2_ahcck"]
[ext_resource type="Script" uid="uid://dboui063mniml" path="res://scenes/room_test/edge_profile.gd" id="3_0pl7j"]
[ext_resource type="PackedScene" uid="uid://c87ow3nssv1cn" path="res://scenes/rooms/finalizers/finalizer_1x1.tscn" id="3_nclto"]
[ext_resource type="Script" uid="uid://ca2dfl5s0wo5o" path="res://scenes/room_test/room_profile.gd" id="4_1qvlg"]
[ext_resource type="PackedScene" uid="uid://djya21tijqj7m" path="res://scenes/room_test/visualizer_ui.tscn" id="6_o6no7"]

[sub_resource type="Resource" id="Resource_ybnmi"]
script = ExtResource("3_0pl7j")
side = 0
position = Vector2i(1, 2)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_vmehl"]
script = ExtResource("4_1qvlg")
size = Vector2i(2, 3)
edges = Array[ExtResource("3_0pl7j")]([SubResource("Resource_ybnmi")])

[sub_resource type="Resource" id="Resource_ubumt"]
script = ExtResource("3_0pl7j")
side = 2
position = Vector2i(0, 0)
key_choices = Array[StringName]([&"neutral", &"double_jump"])
optional = true

[sub_resource type="Resource" id="Resource_gqwik"]
script = ExtResource("3_0pl7j")
side = 0
position = Vector2i(1, 0)
key_choices = Array[StringName]([&"neutral", &"double_jump"])
optional = true

[sub_resource type="Resource" id="Resource_1j38j"]
script = ExtResource("3_0pl7j")
side = 2
position = Vector2i(0, 1)
key_choices = Array[StringName]([&"neutral", &"double_jump"])
optional = true

[sub_resource type="Resource" id="Resource_1p6au"]
script = ExtResource("3_0pl7j")
side = 0
position = Vector2i(1, 1)
key_choices = Array[StringName]([&"neutral", &"double_jump"])
optional = true

[sub_resource type="Resource" id="Resource_me3qc"]
script = ExtResource("4_1qvlg")
size = Vector2i(2, 2)
edges = Array[ExtResource("3_0pl7j")]([SubResource("Resource_ubumt"), SubResource("Resource_gqwik"), SubResource("Resource_1j38j"), SubResource("Resource_1p6au")])

[sub_resource type="Resource" id="Resource_b6iyy"]
script = ExtResource("3_0pl7j")
side = 2
position = Vector2i(0, 0)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_of3l3"]
script = ExtResource("3_0pl7j")
side = 0
position = Vector2i(1, 0)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_hb5j7"]
script = ExtResource("4_1qvlg")
size = Vector2i(2, 1)
edges = Array[ExtResource("3_0pl7j")]([SubResource("Resource_b6iyy"), SubResource("Resource_of3l3")])

[sub_resource type="Resource" id="Resource_eu0s5"]
script = ExtResource("3_0pl7j")
side = 0
position = Vector2i(0, 0)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_d3cph"]
script = ExtResource("3_0pl7j")
side = 2
position = Vector2i(0, 1)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_glvce"]
script = ExtResource("3_0pl7j")
side = 1
position = Vector2i(0, 1)
key_choices = Array[StringName]([&"neutral"])
optional = true

[sub_resource type="Resource" id="Resource_uyhrg"]
script = ExtResource("4_1qvlg")
size = Vector2i(1, 2)
edges = Array[ExtResource("3_0pl7j")]([SubResource("Resource_eu0s5"), SubResource("Resource_d3cph"), SubResource("Resource_glvce")])

[sub_resource type="Resource" id="Resource_hguxc"]
script = ExtResource("3_0pl7j")
side = 3
position = Vector2i(0, 0)
key_choices = Array[StringName]([&"neutral"])
optional = true

[sub_resource type="Resource" id="Resource_ryap1"]
script = ExtResource("3_0pl7j")
side = 0
position = Vector2i(0, 1)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_ahcck"]
script = ExtResource("3_0pl7j")
side = 2
position = Vector2i(0, 0)
key_choices = Array[StringName]([])
optional = false
metadata/_custom_type_script = "uid://dboui063mniml"

[sub_resource type="Resource" id="Resource_1frxe"]
script = ExtResource("4_1qvlg")
size = Vector2i(1, 2)
edges = Array[ExtResource("3_0pl7j")]([SubResource("Resource_hguxc"), SubResource("Resource_ryap1"), SubResource("Resource_ahcck")])

[sub_resource type="Resource" id="Resource_q66or"]
script = ExtResource("3_0pl7j")
side = 2
position = Vector2i(0, 0)
key_choices = Array[StringName]([&"neutral"])
optional = false

[sub_resource type="Resource" id="Resource_hxu50"]
script = ExtResource("4_1qvlg")
size = Vector2i(1, 2)
edges = Array[ExtResource("3_0pl7j")]([SubResource("Resource_q66or")])

[node name="RoomTest" type="Node2D"]
script = ExtResource("1_3p6pu")
key_ordering = ExtResource("2_ahcck")
room_pool_search_mode = "Directory"
room_pool_directory = "res://scenes/rooms"
finalizer_room_array = Array[PackedScene]([ExtResource("3_nclto")])

[node name="Pool" type="Node2D" parent="."]

[node name="0000" type="Node2D" parent="Pool"]
position = Vector2(704, 320)
script = ExtResource("2_1487q")
profile = SubResource("Resource_vmehl")

[node name="0001" type="Node2D" parent="Pool"]
position = Vector2(744, 328)
script = ExtResource("2_1487q")
profile = SubResource("Resource_me3qc")

[node name="0002" type="Node2D" parent="Pool"]
position = Vector2(784, 336)
script = ExtResource("2_1487q")
profile = SubResource("Resource_hb5j7")

[node name="0003" type="Node2D" parent="Pool"]
position = Vector2(824, 328)
script = ExtResource("2_1487q")
profile = SubResource("Resource_uyhrg")

[node name="0004" type="Node2D" parent="Pool"]
position = Vector2(848, 328)
script = ExtResource("2_1487q")
profile = SubResource("Resource_1frxe")

[node name="Disabled" type="Node2D" parent="."]
visible = false

[node name="0005" type="Node2D" parent="Disabled"]
position = Vector2(872, 328)
script = ExtResource("2_1487q")
profile = SubResource("Resource_hxu50")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VisualizerUi" parent="CanvasLayer" node_paths=PackedStringArray("room_test") instance=ExtResource("6_o6no7")]
unique_name_in_owner = true
room_test = NodePath("../..")

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]

[connection signal="generation_started" from="." to="CanvasLayer/VisualizerUi" method="initialize"]
[connection signal="generate_pressed" from="CanvasLayer/VisualizerUi" to="." method="_on_visualizer_ui_generate_pressed"]
[connection signal="screenful_clicked" from="CanvasLayer/VisualizerUi" to="." method="_on_visualizer_ui_screenful_clicked"]
